# ateruta

./: .gitignore  AGENTS.md
.github/workflows/: preflight.yml
backend/: .air.toml  .env.example  .gitignore  AGENTS.md  Makefile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/server/: game.go  http.go  server.go  settings.go  token.go  types.go
frontend/: .gitignore  AGENTS.md  Makefile  biome.json  index.html  package.json  vite.config.ts
frontend/src/: app.tsx  config.ts  main.tsx  music.ts  styles.css  types.ts
spec/: AGENTS.md
spec/features/: AGENTS.md
spec/features/backend/: game.feature  reconnection.feature  room_settings.feature
spec/features/frontend/: app.feature  apple_music.feature  game_answer.feature  game_play.feature  home_screen.feature  lobby.feature  result.feature  room_screen.feature
spec/features/integration/: full_game.feature  (+1 more)
spec/step_defs/: .env.example  .gitignore  AGENTS.md  conftest.py  pyproject.toml
tests/: CLAUDE.md  pyproject.toml
tests/features/: AGENTS.md
tests/step_defs/: .env.example  CLAUDE.md  Makefile  conftest.py  pyproject.toml
tests/step_defs/backend/: helpers.py  test_game.py  test_reconnection.py  test_room_settings.py  test_session.py
tests/step_defs/frontend/: conftest.py  helpers.py  musickit_mock.py  test_app.py  test_apple_music.py  test_game_answer.py  test_game_play.py  test_home_screen.py  test_lobby.py  test_result.py  test_room_screen.py
tests/step_defs/integration/: conftest.py  helpers.py  test_full_game.py  test_host_reconnection.py  test_multiplayer.py
(+42 files in other folders)
